--- a/files/php-fpm.conf
+++ b/files/php-fpm.conf
@@ -17,7 +17,7 @@ pm.max_children = 75
 
 pm.process_idle_timeout = 10s
 pm.max_requests = 500
-chdir = /var/www/html
+chdir = /usr/share/webapps/icingaweb2/public
 php_flag[display_errors] = on
 php_admin_value[memory_limit] = 128M
 php_admin_value[upload_max_filesize] = 2G
